update default config file

--- a/config.default.yaml
+++ b/config.default.yaml
@@ -22,7 +22,7 @@ db_api_sql:
     dbname: test
     sslmode: false
   - name: datasource3
-    type: postgresql
+    type: postgres
     host: 127.0.0.1
     port: 3306
     username: "test"
