--- a/fixtures/config.default.yaml
+++ b/fixtures/config.default.yaml
@@ -13,3 +13,11 @@ api_gateway_sql:
     data_source_name: school
     multi: false
     sql: "select * from student"
+  - name: find-one-student
+    data_source_name: school
+    multi: false
+    sql: "select * from student where id = {{id}}"
+  - name: find-student-with-cond
+    data_source_name: school
+    multi: false
+    sql: "select * from student where class_id = {{class}} and school_id = {{school}} and age >= {{age}}"
