--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Install sqlite build dependencies
+        run: sudo apt-get update && sudo apt-get install -y gcc sqlite3 libsqlite3-dev
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
